# rcsection

./: .gitignore  .typstignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  dsl_design_plan.md  typst.toml
.github/workflows/: release.yml  test.yml
docs/: manual.typ
examples/: beam.rcs  beam_longitudinal.rcs  beam_section.rcs  circular.rcs  column.rcs  column_elevation.rcs  column_section.rcs  columna.rcs  fractional.rcs  longitudinal.rcs  minimal.rcs  monochrome.rcs  scales.rcs  spd.rcs
plugin/: Cargo.toml
plugin/src/: geometry.rs  lib.rs
plugin/src/parser/: ast.rs  grammar.lalrpop  mod.rs
python/: rcsection.py
scripts/: gen_test.py  uninstall.py  utils.py
src/: draw.typ  lib.typ  parser.wasm  rcsection.typ
tests/: .gitignore
tests/beam/: test.typ
tests/beam_longitudinal/: test.typ
tests/beam_section/: test.typ
tests/circular/: test.typ
tests/column_elevation/: test.typ
tests/column_kind/: test.typ
tests/column_section/: test.typ
tests/columna/: test.typ
tests/columna_v/: test.typ
tests/figure/: test.typ
tests/fractional/: test.typ
tests/longitudinal/: test.typ
tests/minimal/: test.typ
tests/monochrome/: test.typ
tests/spd/: test.typ
